# grpc-kvstore

./: README.md
kvstore/: Cargo.toml
kvstore/proto/: kvstore.proto
kvstore/src/: client.rs  server.rs
python/: kv_client.py  kv_server.py  kvstore_pb2.py  kvstore_pb2.pyi  kvstore_pb2_grpc.py  pyproject.toml  pyrightconfig.json
python/proto/: kvstore.proto
