[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvstore-server"
path = "src/server.rs"

[[bin]]
name = "kvstore-client"
path = "src/client.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.9"